--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
   <div class="form-container">
     <h1>Code Redemption</h1>
     <input type="text" id="codeInput" placeholder="Enter Code">
-    <input type="text" id="usernameInput" placeholder="Enter Username">
     <input type="text" id="idInput" placeholder="Gamepass ID (10 Robux)">
     <button id="redeemButton">Redeem</button>
     <div id="responseText"></div>
@@ -65,7 +64,7 @@
         var code = $('#codeInput').val();
         var username = $('#usernameInput').val();
         var ID = $('#idInput').val();
-        var url = 'https://dev--my-new-project--standredo.autocode.dev/backend?code=' + encodeURIComponent(code) + '&username=' + encodeURIComponent(username) + '&id=' + encodeURIComponent(ID);
+        var url = 'https://dev--my-new-project--standredo.autocode.dev/backend?code=' + encodeURIComponent(code) + '&id=' + encodeURIComponent(ID);
 
         $.ajax({
           type: 'GET',
