--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 #responseText {
   margin-top: 20px;
   font-weight: bold;
-  color: red; /* Added to highlight error message */
+  color: black; /* Added to highlight error message */
 }
 </style>
 </head>
